--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <div class="row">
                                     <div class="col-md-12 text-center">
                                         <div class="bannerText container">
-                                          <h1>Coding STEM Academy</h1>
+                                          <h1>Coding STEM Academy Test</h1>
                                             <div id="typed-strings">
                                                 <p>AP Computer Science</p>
                                                 <p>AP STEM Tests</p>
